--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
     - Basic Tutorial: 'Basic-Tutorial.md'
     - Getting OTP: 'Getting-OTP.md'
     - Container image: 'Container-Image.md'
+    - System Requirements and Suggestions: 'System-Requirements.md'
     - Configuration:
         - Introduction: 'Configuration.md'
         - Build: 'BuildConfiguration.md'
