--- a/.github/workflows/performance-test.yml
+++ b/.github/workflows/performance-test.yml
@@ -10,6 +10,7 @@ jobs:
     if: github.repository_owner == 'opentripplanner' && !startsWith(github.event.head_commit.message ,'Bump serialization version id for')
     runs-on: performance-test
     strategy:
+      fail-fast: false
       matrix:
         include:
 
@@ -48,6 +49,7 @@ jobs:
           java-version: 17
           distribution: temurin
           cache: maven
+        timeout-minutes: 5
 
       - name: Set up Maven
         uses: stCarolas/setup-maven@v.4.5
